@@ -12,6 +12,9 @@ BUG FIXES
  * Issue 319: (Linux) process get_memory_maps() raises KeyError 'Anonymous' on
    Debian squeeze.
  * Issue 333: (OS X) Leak of Mach ports on OS X (patch by rsesek@google.com)
+ * Issue 337: (Linux) process methods not working because of a poor /proc
+   implementation will raise NotImplementedError rather than RuntimeError and
+   Process.as_dict() will not blow up.  (patch by Curtin1060)
  * Issue 339: (FreeBSD) get_pid_list() can allocate all the memory on system.
  * Issue 340: (Windows) Process.get_open_files() might hang forever.
  * Issue 341: (Linux) psutil might crash on import due to error in retrieving
